Aligned client logos and fixed flash text

--- a/less/main.less
+++ b/less/main.less
@@ -270,3 +270,19 @@ h1.slogan {
         background-position: -30px 0;
     }
 }
+
+.clients {
+    margin-top: 30px;
+}
+
+.item-client {
+    display:inline-block;
+    margin-right: 30px;
+    margin-bottom:30px;
+}
+
+.client-tribuna {
+    padding:10px 12px 15px;
+    background-color:#fff;
+    border-radius: 2px;
+}
